--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.10.1",
