--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modalize": "^2.1.1",
